# xnrs

./: .gitignore  README.md  demo_imaginary_data.ipynb  demo_mind_data.ipynb  plot_21414.out  plot_CL_polar.py  plot_tsne.py  pyproject.toml  results.md  run_CL_tune.job  run_make_mind_dataset.job  run_plot.job  run_train.job  run_train_CL.job  run_train_LSTUR.job  run_train_NAML.job  run_train_NPA.job  test.py  test_CL_21374.out  test_CL_21592.err  test_CL_21592.out  test_CL_2916.out  test_CL_2924.out  test_CL_2927.out  test_CL_8391.out  test_CL_emb_21508.err  test_CL_emb_21508.out  test_CL_plot_19474.out  test_CL_plot_19483.out  tests.py  train.py  train_mind_21604.err  train_mind_21604.out  train_mind_7674.out  train_mind_small_2779.out
config/: adressa_standard.yml  mind_small.yml  mind_small_CL.yml  mind_small_LSTUR.yml  mind_small_NAML.yml  mind_small_NPA.yml  mind_small_NRMS.yml  mind_standard.yml
das5/: run_CL_tune.job  run_train.job  run_train_CL.job  run_train_LSTUR.job  run_train_NAML.job  run_train_NRMS.job
xnrs/: __init__.py  explain.py  training.py  utils.py
xnrs/data/: __init__.py  adressa.py  dataset.py  make_adressa_dataset.py  make_mind_dataset.py  mind.py  utils.py
xnrs/evaluation/: metrics.py  visualization.py
xnrs/models/: __init__.py  make_model.py  utils.py
xnrs/models/components/: __init__.py  layers.py  news_encoding.py  parent.py  scoring.py  user_encoding.py
xnrs/models/full_models/: __init__.py  base_model.py  caum.py  lstur.py  mean_model.py  naml.py  npa.py  nrms.py  param_free_model.py  standard_model.py
